Release 2.1-dev
===============

Known problems
--------------

- Numpy arrays with complex or unicode elements seem to be now causing a
  segfault

New Features
------------

:mod:`rpy2.rinterface`:

- New functions for specifying callback functions for R's front-ends:
  :func:`setShowMessage`, :func:`setFlushConsole`, :func:`setChooseFile`, :func:`setShowFiles`

- Initial commit of a callback-based implementation of an R graphical device
  (this is for the moment very experimental - and not fully working)

Changes
-------


Bugs fixed
----------



Release 2.0.3
=============

New Features
------------

:mod:`rpy2.rinterface`:

- :meth:`process_revents`, a Wrapper for R_ProcessEvents 
  (# suggested by June Kim to help with issues related to interactive display on win32),
  and for R_RunHandlers on UNIX-like systems 
  (# patch by Nathaniel Smith).

- All callbacks are getting a get<callback> to complement the set<callback>.
  (# Patch by Nathaniel Smith) 

- :meth:`Sexp.__deepcopy__` to copy an object (calling Rf_Duplicate) 
   (# from a patch by Nathaniel Smith)
 
Changes
-------
 
- the default for reading and writing the console are now using sys.stdin and sys.stdout 
  (# patch submitted by Nathaniel Smith)
 
- console IO callbacks (reading and writing) are complemented by 
  one to flush the console

- :meth:`Sexp.do_slot_assign` now creates the slot if missing
  (design-fix - # patch by Nathaniel Smith)
 

Bugs fixed
----------
 
- fixed problem of numpy interface with R boolean vectors. 
  They are now presented as 'i' rather than 'b' to numpy
  (# patch submitted by Nathaniel Smith)
 
- The mechanism for setting arbitrary callaback functions for console I/O 
  now ensures that a traceback is printed to stderr whenever an error
  occurs during the evalutation of the callback (the raised exception used
  to be silently propagated to the next python call, leading to problems).


Release 2.0.2
=============

Bugs fixed
----------
